changed link colour and fixed weird spacing issue i hate html

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -76,6 +76,15 @@
 
 /* BODY AND EVERYTHING ELSE */
 
+.recipeLink {
+  color: #ffb347;
+  text-decoration: none;
+}
+
+.recipeLink:visited {
+  color: #ffb347;
+}
+
 body {
   color: var(--retro-text);
   background-color: var(--retro-bg);
